# OGS5GEMDEV

./: README.md  README.txt  authors.txt  setup.bat  setup_linux.sh  setup_symlinks.bat  setup_vcexpress.bat  setup_win.bat  setup_win_cl_only.bat  setup_win_cl_only_vcexpress.bat  setup_win_vcexpress.bat  setup_win_with_qt.bat  setup_win_with_qt_vcexpress.bat  svnmerge.py
ExampleData/: BodeComplex.gli  BodeComplex.gml  BodeGroundWater.stn  BodePrecipitation.stn  BodeSelectedBoreholes.stn  BodeSimple.gli  BodeSimple.gml  BodeSimple.msh  BodeTestProject.gsp  LogCurve.tline  gross_schoenebeck_faults.ts  gross_schoenebeck_faults_modified.ts  gross_schoenebeck_transformed_faults.ts  points.gli  testSurface.ts  timeseries-a.stn  timeseries-b.stn
GIS2FEM_exam/3Dsurface_integration/: selke_top_surface_Neumann_BC.txt
GIS2FEM_exam/Raster2BC/: mHM_sim_Percolation_1991_1.asc  mHM_sim_Percolation_1991_2.asc  mHM_sim_Percolation_1991_3.asc  mHM_sim_Percolation_1991_4.asc  mHM_sim_Percolation_1991_5.asc  mHM_sim_Percolation_1991_6.asc  selke.pcp
GIS2FEM_exam/mHM_OGS/: selke.bc  selke.gli  selke.gsp  selke.ic  selke.ifl  selke.lay  selke.mfp  selke.mmp  selke.msh  selke.num  selke.out  selke.pcs  selke.rfd  selke.st  selke.tim  selke_GROUNDWATER_FLOW_HEAD_primary_value.asc
GIS2FEM_exam/shapefile/: bode.asc  bode.msh
Libs/ToolsWin/: Scripter.ini  ibjom.cmd
Libs/precompiled/: fdelaun2d.h  fdelaun3d.h
Patches/: CMake_use_relativepaths_as_default_onMSVC.patch  Sequential_staggered_scheme_7fc39fdd06b5a2d9d43235d87ded1cca2571da81.patch  fix_GEMS_MPI_config_GK_HS_5_0_03.patch  objects_mak.diff  patch_rf_out_new.cpp-for-r5407  rf_pcs.cp-fix_for_timestepping_kg44.diff  rf_tim_new.cpp-kg44-adapt_timesteps.diff
benchmarks/: AKS.cmake  CB.cmake  HS.cmake  MW.cmake  NB.cmake  NW.cmake  PCH.cmake  WH.cmake  WW.cmake
benchmarks/M/: m_brick_l.gli
benchmarks/PETSc/: petsc_jobs.sh
benchmarks/TH2M/: th2m_quad.lay  th2m_quad_H.lay  th2m_quad_M.lay  th2m_quad_T.lay
benchmarks/THM/: clean.bat
benchmarks_ref/COUPLED_FLOW/: abdul_POLYLINE_OUTPUT_TIM_RICHARDS_FLOW.tec  abdul_domain_OVERLAND_FLOW_tri.tec  abdul_ply_OUTPUT_t3_RICHARDS_FLOW.tec  abdul_time_POINT4_OVERLAND_FLOW.tec  abdul_time_POINT5_OVERLAND_FLOW.tec
benchmarks_ref/GROUNDWATER_FLOW/: q_hex_time_POINT4.tec  riv1_hex_time_POINT4.tec  riv1_pris_time_POINT4.tec  riv1_quad_time_POINT4.tec  riv2_hex_time_POINT4.tec  uc_pris_domain_LIQUID_FLOW_pris.tec  uc_pris_domain_pris.tec  uc_quad_domain_quad.tec  uc_tri_domain_GROUNDWATER_FLOW_tri.tec
benchmarks_ref/HM/: hm_cc_tri_s_domain_DEFORMATION_FLOW_tri.tec  hm_cc_tri_s_time_POINT2_DEFORMATION_FLOW.tec  hm_dyn_tri_domain_DEFORMATION_FLOW_tri.tec  hm_dyn_tri_ply_ex2_Out_axis_t1_DEFORMATION_FLOW.tec  hm_dyn_tri_ply_ex2_out_Bedge_t2_DEFORMATION_FLOW.tec  hm_foot_tet_domain_DEFORMATION_FLOW_tet.tec  hm_foot_tet_ply_OUT_AXIS_t1_DEFORMATION_FLOW.tec  hm_foot_tri_domain_DEFORMATION_FLOW_tri.tec  hm_foot_tri_ply_ex2_Out_axis_t1_DEFORMATION_FLOW.tec  hm_foot_tri_ply_ex2_out_Bedge_t2_DEFORMATION_FLOW.tec  hm_tri_domain_DEFORMATION_FLOW_tri.tec  hm_tri_ply_RIGHT_t1_DEFORMATION_FLOW.tec  hm_tri_time_POINT0_DEFORMATION_FLOW.tec  hm_unsat_domain_quad.tec  hm_unsat_ply_RIGHT_t1.tec  hm_unsat_time_POINT0.tec
benchmarks_ref/M/: 3D_oedometer_mohr_coulomb_domain_hex.tec  m_brick_l_domain_DEFORMATION_tet.tec  m_brick_l_domain_tet.tec  m_brick_l_time_POINT9_DEFORMATION.tec  m_cc_quad_s_domain_quad.tec  m_cc_quad_s_time_POINT2.tec  m_cc_tri_s_domain_tri.tec  m_cc_tri_s_time_POINT2.tec  m_drift_domain_quad.tec  m_drift_init_domain_tri.tec  m_drift_init_ply_PLY_11_t1.tec  m_drift_init_ply_PLY_13_t2.tec  m_drift_init_ply_PLY_14_t3.tec  m_drift_init_ply_PLY_15_t4.tec  m_drift_ply_PLY_11_t1_DEFORMATION.tec  m_drift_ply_PLY_13_t2_DEFORMATION.tec  m_drift_ply_PLY_14_t3_DEFORMATION.tec  m_drift_ply_PLY_15_t4_DEFORMATION.tec  m_e_transiso_2D_domain_quad.tec  m_e_transiso_2D_time_POINT0.tec  m_e_transiso_2D_time_POINT1.tec  m_e_transiso_2D_time_POINT2.tec  m_e_transiso_2D_time_POINT3.tec  m_excav_domain_tri.tec  m_excav_ply_H_PROFILE_t1.tec  m_excav_ply_LEFT_t2.tec  m_excav_time_POINT1.tec  m_excav_time_POINT10.tec  m_excav_time_POINT11.tec  m_excav_time_POINT12.tec  m_excav_time_POINT13.tec  (+18 more)
manual/: CLEAR.BAT  Manual_Preface.tex  adp.tex  authors.tex  bc.tex  bc_new.tex  bc_new1.tex  benchmarks.tex  chm.tex  concept.tex  ctrl.tex  ddc.tex  eqs.tex  fct.tex  geo.tex  gli_file.tex  history.tex  ic.tex  ic_new.tex  manual.out  manual.tex  mat_cp.tex  mat_cp_operations_sc.tex  mat_fp.tex  mat_mp.tex  mat_mp_data_access.tex  mat_mp_data_concept.tex  mat_mp_planned_status.tex  mat_mp_ref.tex  mat_sp.tex  mat_tp.tex  mcp_new.tex  mfp_new.tex  mmp_new.tex  mod.tex  msp_new.tex  nod.tex  num.tex  num_new.tex  out.tex  (+14 more)
partition_m2g/: Makefile  README.txt  geosys_jobscript.sh  matrix_class.cpp  matrix_class.h  mesh.cpp  mesh.h  partition.cpp  partition.sh  partition.vcproj  rungeosys.sh
partmesh/: .gitmodules  CMakeLists.txt  README.md  art_cpp.sh
partmesh/METIS2ogs/: CMakeLists.txt  metis_main.h  partition.cpp
partmesh/MatrixVec/: CMakeLists.txt  Matrix.cpp  Matrix.h  SymMatrix.cpp  SymMatrix.h  vec.cpp  vec.h
partmesh/Mesh/: CMakeLists.txt  Edge.cpp  Edge.h  Elem.cpp  Elem.h  Grain.cpp  Grain.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h
sources/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt  sources.kdev4
sources/UTL/GIS2FEM/: CMakeLists.txt  main.cpp  misc.cpp  misc.h
sources/UTL/MSHGEOTOOLS/: CMakeLists.txt  ExtractSurface.cpp  ExtractSurface.h  convertSurfaceMeshToGeometry.cpp  createLayeredMesh.cpp  createMeshFromPolygon.cpp  mainConvertGLIVerticalSurfaceToPolygon.cpp  mainExtractSurface.cpp  mapGeoToDEM.cpp  mapGeoToMesh.cpp  removeMeshNodes.cpp  rotateMesh.cpp  testMeshSearchAlgorithms.cpp
sources/tests/: CMakeLists.txt
sources/tests/Qt/: CMakeLists.txt  QtTestBase.cpp  QtTestBase.h  QtTestrunner.cpp  TestHelperFunctions.cpp  TestHelperFunctions.h
sources/tests/Qt/Geo/: TestGMSHFromGeo.cpp
sources/tests/Qt/Vtk/: TestMeshFromRaster.cpp
sources/tests/gdiff/: CMakeLists.txt
(+1835 files in other folders)
